cutting instructor demo content

--- a/cookbook/meal-prep/dropdown-prep/css/page10.css
+++ b/cookbook/meal-prep/dropdown-prep/css/page10.css
@@ -149,3 +149,23 @@ body {
     that's essentially how we're going to be
     building dropdown menus.
 */
+
+/*
+    And that wraps up the demo!
+
+    ...but wait, what about Card #6?
+
+    Well, that's a bit of a bonus for any
+    adventurous students out there; your
+    instructor is going to stop the demo 
+    here, but you can continue it on your
+    own in the Cookbook.
+
+    The final part of this demo will teach
+    you how to build a card that "flips" over
+    to reveal different content when you hover 
+    over it.
+
+    It's very cool! But be warned, it also
+    uses some advanced CSS concepts.
+*/
