--- a/cookbook/examples/adopt-me-plz/css/style.css
+++ b/cookbook/examples/adopt-me-plz/css/style.css
@@ -47,6 +47,10 @@ body {
     transform: rotate(45deg);
 }
 
+#navbar #links {
+    display: flex;
+}
+
 /*
     Dropdown styling ********************************************
 */
@@ -148,4 +152,29 @@ h3 {
 
 p {
     font-size: 24px;
+}
+
+@media screen and (max-width: 800px) {
+    #navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+    #navbar #logo {
+        margin-right: 0px;
+    }
+    #navbar #links a {
+        padding: 12px;
+    }
+    #layout {
+        margin: 24px;
+    }
+    #layout img {
+        width: 100%;
+    }
+    h1 {
+        font-size: 48px;
+    }
+    h2 {
+        font-size: 20px;
+    }
 }
