--- a/cookbook/meal-prep/adopt-me-plz/css/style.css
+++ b/cookbook/meal-prep/adopt-me-plz/css/style.css
@@ -47,6 +47,10 @@ body {
     transform: rotate(45deg);
 }
 
+#navbar #links {
+    display: flex;
+}
+
 /*
     Dropdown styling ********************************************
 */
@@ -82,6 +86,10 @@ body {
 #navbar .dropdown-menu a:hover {
     background: #edd0b3;
 }
+
+/*
+    Hero styling ************************************************
+*/
 
 .hero {
     background-image: url("../images/matt-nelson-aI3EBLvcyu4-unsplash.jpg");
@@ -129,6 +137,10 @@ body {
     border: 5px solid black;
 }
 
+/*
+    Layout and general page styling
+*/
+
 #layout {
     background-color: #FFFFFFCC;
     border-radius: 60px;
@@ -148,4 +160,38 @@ h3 {
 
 p {
     font-size: 24px;
+}
+
+/*
+    Media Query for responsiveness
+*/
+@media screen and (max-width: 800px) {
+    #navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #navbar #logo {
+        margin-right: 0px;
+    }
+
+    #navbar #links a {
+        padding: 12px;
+    }
+
+    #layout {
+        margin: 24px;
+    }
+
+    #layout img {
+        width: 100%;
+    }
+
+    h1 {
+        font-size: 48px;
+    }
+    
+    h2 {
+        font-size: 20px;
+    }
 }
