--- a/css/agenda.css
+++ b/css/agenda.css
@@ -48,7 +48,7 @@ h1 {
 }
 
 .img-container {
-    background-color: #bcbfbe;
+    background-color: #091c2f;
     display: flex;
     justify-content: center;
     padding: 24px 0px;
