--- a/css/agenda.css
+++ b/css/agenda.css
@@ -52,7 +52,7 @@ h1 {
 }
 
 #assignments .img-container.more-space {
-    background-color: #606266;
+    background-color: #141b25;
     display: flex;
     justify-content: center;
     padding: 24px 0px;
