--- a/css/agenda.css
+++ b/css/agenda.css
@@ -49,10 +49,11 @@ h1 {
     display: inline-block;
     margin: 24px 0px;
     width: 100%;
+    border-radius: 50% 50% 0px 0px;
 }
 
 #assignments .img-container.more-space {
-    background-color: #606369;
+    background-color: #021f31;
     display: flex;
     justify-content: center;
     padding: 24px 0px;
