--- a/css/agenda.css
+++ b/css/agenda.css
@@ -49,7 +49,7 @@ h1 {
     display: inline-block;
     margin: 24px 0px;
     width: 100%;
-    border-radius: 50% 50% 0px 0px;
+    /* border-radius: 50% 50% 0px 0px; */
 }
 
 #assignments .img-container.more-space {
