mebay and agenda for 2/7

--- a/css/agenda.css
+++ b/css/agenda.css
@@ -53,10 +53,10 @@ h1 {
 }
 
 #assignments .img-container.more-space {
-    background-color: #021f31;
+    background-color: #616266;
     display: flex;
     justify-content: center;
-    padding: 24px 0px;
+    padding: 0px 0px;
     margin: 36px 0px;
 }
 
