--- a/css/agenda.css
+++ b/css/agenda.css
@@ -5,7 +5,7 @@
 body {
     min-height: 96vh;
     background-image: 
-        linear-gradient(#FF000066, #FF000066),
+        /* linear-gradient(#FF000066, #FF000066), */
         url("../images/kh_finalworld.jpg");
     background-size: cover;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -17,8 +17,8 @@ body {
     width: 75%;
     margin: 48px auto;
     background-color: #FFFFFF99;
-    /* border: 8px solid navy; */
-    border: 8px solid rgb(245, 80, 129);
+    border: 8px solid navy;
+    /* border: 8px solid rgb(245, 80, 129); */
     border-radius: 24px;
     padding: 36px;
 }
@@ -82,8 +82,8 @@ h1 {
 }
 
 .wrapper {
-    /* background-color: skyblue; */
-    background-color: rgb(235, 140, 135);
+    background-color: skyblue;
+    /* background-color: rgb(235, 140, 135); */
     padding: 12px;
 }
 
