--- a/cookbook/meal-prep/dropdown-prep/css/page11.css
+++ b/cookbook/meal-prep/dropdown-prep/css/page11.css
@@ -128,7 +128,7 @@ body {
 
 /*
     Card 6 is going to be a bit of a bonus
-    demo; it's a bit advanced, but it's a
+    demo; it's a rather advanced, but it's a
     fun way to apply what we've learned 
     today in an interesting way.
 
