--- a/cookbook/meal-prep/dropdown-nav/css/page0.css
+++ b/cookbook/meal-prep/dropdown-nav/css/page0.css
@@ -1,7 +1,8 @@
 /*
     Dropdown menus are basically a 
-    combination of navbars from Day 1,
-    and hiding/showing content from Day 2.
+    combination of navbars and 
+    hiding/showing content from 
+    earlier in the week.
 
     So, we'll start things off with building
     a basic navbar in our HTML.
