--- a/css/agenda.css
+++ b/css/agenda.css
@@ -56,7 +56,7 @@ h1 {
 }
 
 #assignments .img-container.more-space {
-    background-color: #141c25;
+    background-color: #606369;
     display: flex;
     justify-content: center;
     padding: 0px 0px;
