--- a/cookbook/css/recipeCheatsheet.css
+++ b/cookbook/css/recipeCheatsheet.css
@@ -78,6 +78,7 @@
 }
 
 h2 {
+    font-size: 28px;
     margin-top: 100px;
 }
 
@@ -86,5 +87,13 @@ h2:first-child {
 }
 
 h4 {
+    font-size: 20px;
     margin-top: 48px;
+}
+
+.legend {
+    display: inline-block;
+    width: 200px;
+    text-align: center;
+    font-weight: bold;
 }
