--- a/css/agenda.css
+++ b/css/agenda.css
@@ -66,11 +66,15 @@ h1 + h3 {
 }
 
 #assignments .img-container.more-space {
-    background-color: #0d1b15;
+    background-color: #bcbfbe;
     display: flex;
     justify-content: center;
     padding: 0px 0px;
     margin: 36px 0px;
+}
+
+#assignments .img-container.more-space.light-gray {
+    background-color: #bcbfbe;
 }
 
 #assignments .img-container.more-space img {
