--- a/css/agenda.css
+++ b/css/agenda.css
@@ -77,6 +77,10 @@ h1 + h3 {
     background-color: #bcbfbe;
 }
 
+#assignments .img-container.more-space.dark-gray {
+    background-color: #606367;
+}
+
 #assignments .img-container.more-space.light-green {
     background-color: #89bdb9;
 }
