--- a/css/agenda.css
+++ b/css/agenda.css
@@ -101,6 +101,10 @@ h1 + h3 {
     background-color: #871e2c;
 }
 
+#assignments .img-container.more-space.off-black {
+    background-color: #050505;
+}
+
 #assignments .img-container.more-space img {
     width: 70%;
     display: inline-block;
