--- a/css/agenda.css
+++ b/css/agenda.css
@@ -138,6 +138,10 @@ ul li {
     margin: 8px 0px;
 }
 
+ul ul li {
+    list-style-type: disc;
+}
+
 .type {
     font-weight: bold;
     font-size: 18px;
