--- a/cookbook/meal-prep/dropdown-prep/css/page0.css
+++ b/cookbook/meal-prep/dropdown-prep/css/page0.css
@@ -2,11 +2,11 @@
     This is a demo primarily about hiding and showing
     content, using :hover and CSS Transitions.
 
-    This is actually getting them ready for tomorrow,
-    when we'll be building dropdown menus, but
-    students tend to freak out about the
-    hiding/showing part of dropdown menus,
-    so hopefully this will be preparing for that.
+    This is actually a stepping stone for building
+    dropdown menus; the hiding/showing of a dropdown
+    menu tends to be the most challenging part, so
+    we're demoing that apart from the menus 
+    themselves today to separate the concepts a bit.
 
     We'll be exploring different approaches to 
     hiding/showing content using cards, to keep
