--- a/css/agenda.css
+++ b/css/agenda.css
@@ -113,6 +113,10 @@ h1 + h3 {
     background-color: #050505;
 }
 
+#assignments .img-container.more-space.final-black {
+    background-color: #0d1b15;
+}
+
 #assignments .img-container.more-space img {
     width: 70%;
     display: inline-block;
