--- a/cookbook/css/html-checker.css
+++ b/cookbook/css/html-checker.css
@@ -19,27 +19,43 @@ h1 {
     border-radius: 45px;
 }
 
-#inputContainer {
+#inputContainer form {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding: 24px 48px;
-    gap: 100px;
+    gap: 24px 60px;
 }
 
 #inputContainer h2 {
     flex: 1;
 }
 
-#inputContainer #textInputContainer {
-    flex: 2;
-}
-#inputContainer #urlInputContainer {
+#inputContainer form #textInputContainer {
     flex: 1;
+}
+#inputContainer form #orContainer {
+    font-size: 48px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+}
+#inputContainer form #urlInputContainer {
+    flex: 1;
+}
+#inputContainer form #buttonContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 48px;  
+}
+
+#inputContainer textarea {
+    min-height: 60px;
 }
 
 #inputContainer textarea,
-#inputContainer input,
-#inputContainer button {
+#inputContainer input {
     min-width: 100%;
 }
 
@@ -60,6 +76,18 @@ h1 {
     font-size: 16px;
     padding: 6px 12px;
     margin-top: 12px;
+    min-width: 200px;
+    transition: transform 0.25s;
+}
+
+
+#inputContainer button:hover {
+    transform: scale(1.05);
+}
+
+#inputContainer button#clear {
+    background-color: white;
+    color: #ff7050;
 }
 
 #inputContainer .buttonContainer {
@@ -73,19 +101,25 @@ h1 {
 }
 
 #report {
-    padding: 24px 48px;
     opacity: 0;
 }
 
-#report h1 {
-    font-size: 48px;
+#report #reportHeader {
+    background-color: #1a3159;
+    color: white;
+    text-align: center;
+    padding: 24px;
+    margin: 0px;
+    border-radius: 32px 32px 0px 0px;
+}
+
+#report #innerReportContainer {
+    padding: 24px 48px;
 }
 
 #report #overall {
     display: flex;
     align-items: center;
-    border: 5px solid #1a3159;
-    border-width: 5px 0px;
 }
 
 #report #overall,
@@ -121,7 +155,9 @@ h6 {
     font-size: 72px;
 }
 
-#issuesList {
+#overall,
+#issuesList,
+#legendOuterContainer {
     background-color: white;
     border: 3px solid #ff7050;
     border-radius: 12px;
@@ -129,22 +165,19 @@ h6 {
     margin: 0px 24px;
 }
 
+#legendOuterContainer {
+    padding: 24px;
+    margin: 0px;
+}
+
 #issuesList .issue {
     margin: 24px 0px;
 }
 
-#cleanupHelperHeading {
+/* #cleanupHelperHeading {
     border-top: 5px solid #1a3159;
     padding-top: 24px;
-}
-
-#legendOuterContainer {
-    background-color: white;
-    border: 3px solid #ff7050;
-    border-radius: 12px;
-    box-shadow: 4px 4px 4px #00000033;
-    padding: 24px;
-}
+} */
 
 #legendContainer {
     display: flex;
