--- a/cookbook/meal-prep/two-column-grid-layouts/css/page0.css
+++ b/cookbook/meal-prep/two-column-grid-layouts/css/page0.css
@@ -11,7 +11,7 @@
     at the end with a differently styled sidebar.
 
     The HTML setup is also exactly the same as yesterday
-    just with a different container class name: 
+    just with a different container id name: 
     "grid-layout" instead of "two-columns"
     
     We'll be modifying things towards the end of the 
