--- a/cookbook/meal-prep/two-column-grid-layouts/css/page1.css
+++ b/cookbook/meal-prep/two-column-grid-layouts/css/page1.css
@@ -17,7 +17,7 @@ body {
     functionality on our #grid-layout container.
 
     You should have gone through the CSS Grid 
-    powerpoint by now, but once again, call out the 
+    powerpoint by now, but once again, note the 
     important differences between Grid Container 
     and Grid Item properties; the differences are
     just as important here as they are for Flexbox.
