--- a/cookbook/meal-prep/two-column-grid-layouts/css/page2.css
+++ b/cookbook/meal-prep/two-column-grid-layouts/css/page2.css
@@ -51,7 +51,7 @@ body {
 }
 
 /*
-    As a reminder, encourage students to check out
+    As a reminder, you can check out
     the layout page in the Coding Cookbook for the 
     evenly sized two column layout, since we won't 
     be doing any further demos for them in class.
