--- a/cookbook/meal-prep/two-column-grid-layouts/css/page4.css
+++ b/cookbook/meal-prep/two-column-grid-layouts/css/page4.css
@@ -19,7 +19,7 @@ body {
     (another way that Grids are more rigid than Flexboxes).
 
     We COULD reorder our HTML, but watch what happens
-    (demonstrate for the class).
+    (try it out in the HTML).
 
     We swapped the content of the columns...but our
     sidebar is now in our flexible column, and our
