--- a/cookbook/meal-prep/two-column-grid-layouts/css/page5.css
+++ b/cookbook/meal-prep/two-column-grid-layouts/css/page5.css
@@ -18,7 +18,7 @@ body {
     in the Domino's two column website we saw
     in the previous day's powerpoint.
 
-    (show that example from the powerpoint)
+    (look back at that example from the powerpoint)
 
     Our version will be a little simpler, of
     course, but we can still create the same
