--- a/cookbook/css/appetizer.css
+++ b/cookbook/css/appetizer.css
@@ -2,6 +2,10 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.bold {
+    font-weight: bold;
+}
+
 .cookbookPage {
     position: relative;
 }
